# practice-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  clang-format.txt
.github/ISSUE_TEMPLATE/: feature-exercise-request.md  issue-report.md
chrono/: task_1.cpp
compilation/task1/: README.md
compilation/task2/: README.md  main.cpp  timestamp.cpp
condition_variable/: task_1.cpp  task_3.cpp  task_4.cpp
exercises/: CMakeLists.txt
exercises/chrono/: task_1.cpp
exercises/compilation/task1/: README.md  print_time.cpp
exercises/condition_variable/: task_1.cpp  task_2.cpp  task_4.cpp
exercises/sorting/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
exercises/sorting/internal/: task_4.h
sorting/: task_5.cpp  task_6.cpp
template/: task_1.cpp
